[gd_scene load_steps=17 format=4 uid="uid://dv5mfiac8oeu2"]

[ext_resource type="Script" uid="uid://c1saa6505vllx" path="res://player.gd" id="1_ju177"]
[ext_resource type="Script" uid="uid://bx825giu8nfqm" path="res://game_manager.gd" id="1_t23pn"]
[ext_resource type="Texture2D" uid="uid://wibm35yjlbfl" path="res://sprites/gardensunset_360.png" id="2_2rp3p"]
[ext_resource type="Texture2D" uid="uid://bubm6qj1gan05" path="res://tilesets/Sprout Lands - Sprites - Basic pack-3/Tilesets/Grass.png" id="2_bw225"]
[ext_resource type="Texture2D" uid="uid://ck04in5gxo810" path="res://tilesets/GardenTileMap.png" id="3_07l7t"]
[ext_resource type="Script" uid="uid://bxwq3ar33rekb" path="res://background_sprite.gd" id="3_c5bxn"]
[ext_resource type="Texture2D" uid="uid://dif2vjwxb7tu1" path="res://sprites/witch1_360.png" id="4_t23pn"]
[ext_resource type="Texture2D" uid="uid://by2rgm35bqbln" path="res://sprites/Witch1-3.png" id="6_v46g0"]
[ext_resource type="Texture2D" uid="uid://3bvowxj6k0pl" path="res://sprites/Witch1-2.png" id="7_kmnj1"]
[ext_resource type="Texture2D" uid="uid://lf2t1m5x7hbw" path="res://sprites/Witch1.png" id="8_2rp3p"]
[ext_resource type="PackedScene" uid="uid://8oxtceiwqnw6" path="res://scenes/FlowerInstance.tscn" id="11_c5bxn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bw225"]
texture = ExtResource("2_bw225")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jynu1"]
texture = ExtResource("3_07l7t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSet" id="TileSet_vkr66"]
sources/0 = SubResource("TileSetAtlasSource_bw225")
sources/1 = SubResource("TileSetAtlasSource_jynu1")

[sub_resource type="CircleShape2D" id="CircleShape2D_bw225"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c5bxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_t23pn")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_t23pn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_v46g0")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kmnj1")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_2rp3p")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_t23pn")

[node name="BackgroundSprite" type="Sprite2D" parent="GameManager"]
position = Vector2(589.5, -162.50024)
scale = Vector2(38, 20.181)
texture = ExtResource("2_2rp3p")
script = ExtResource("3_c5bxn")

[node name="FarmTiles" type="TileMapLayer" parent="GameManager"]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD//x8AAQAAAAAAAAD//yAAAQAAAAAAAAD//yEAAQAAAAAAAAD//yIAAQAAAAAAAAD//yMAAQAAAAAAAAD//yQAAQAAAAAAAAD//yUAAQAAAAAAAAD//yYAAQAAAAAAAAD//ycAAQAAAAAAAAD//ygAAQAAAAAAAAD//ykAAQAAAAAAAAD//yoAAQAAAAAAAAD//ysAAQAAAAAAAAD//ywAAQAAAAAAAAD//y0AAQAAAAAAAAD//y4AAQAAAAAAAAAAAAIAAQAAAAEAAAAAAAMAAQADAAAAAAAAAB8AAQAAAAAAAAAAACAAAQAAAAAAAAAAACEAAQAAAAAAAAAAACIAAQAAAAAAAAAAACMAAQAAAAAAAAAAACQAAQAAAAAAAAAAACUAAQAAAAAAAAAAACYAAQAAAAAAAAAAACcAAQAAAAAAAAAAACgAAQAAAAAAAAAAACkAAQAAAAAAAAAAACoAAQAAAAAAAAAAACsAAQAAAAAAAAAAACwAAQAAAAAAAAAAAC0AAQAAAAAAAAAAAC4AAQAAAAAAAAABAAIAAQAAAAEAAAABAAMAAQADAAAAAAABAB8AAQAAAAAAAAABACAAAQAAAAAAAAABACEAAQACAAAAAAABACIAAQAAAAAAAAABACMAAQAAAAAAAAABACQAAQAAAAAAAAABACUAAQAAAAAAAAABACYAAQAAAAAAAAABACcAAQAAAAAAAAABACgAAQAAAAAAAAABACkAAQAAAAAAAAABACoAAQAAAAAAAAABACsAAQAAAAAAAAABACwAAQAAAAAAAAABAC0AAQAAAAAAAAABAC4AAQAAAAAAAAACAAIAAQAAAAEAAAACAAMAAQADAAAAAAACAB8AAQAAAAAAAAACACAAAQAAAAAAAAACACEAAQAAAAAAAAACACIAAQAAAAAAAAACACMAAQAAAAAAAAACACQAAQAAAAAAAAACACUAAQAAAAAAAAACACYAAQAAAAAAAAACACcAAQAAAAAAAAACACgAAQAAAAAAAAACACkAAQAAAAAAAAACACoAAQAAAAAAAAACACsAAQAAAAAAAAACACwAAQAAAAAAAAACAC0AAQAAAAAAAAACAC4AAQAAAAAAAAADAAIAAQAAAAEAAAADAAMAAQADAAAAAAADAB8AAQACAAAAAAADACAAAQACAAAAAAADACEAAQAAAAAAAAADACIAAQAAAAAAAAADACMAAQAAAAAAAAADACQAAQAAAAAAAAADACUAAQAAAAAAAAADACYAAQAAAAAAAAADACcAAQAAAAAAAAADACgAAQAAAAAAAAADACkAAQAAAAAAAAADACoAAQAAAAAAAAADACsAAQAAAAAAAAADACwAAQAAAAAAAAADAC0AAQAAAAAAAAADAC4AAQAAAAAAAAAEAAIAAQAAAAEAAAAEAAMAAQADAAAAAAAEAB8AAQACAAAAAAAEACAAAQACAAAAAAAEACEAAQAAAAAAAAAEACIAAQAAAAAAAAAEACMAAQAAAAAAAAAEACQAAQAAAAAAAAAEACUAAQAAAAAAAAAEACYAAQAAAAAAAAAEACcAAQAAAAAAAAAEACgAAQAAAAAAAAAEACkAAQAAAAAAAAAEACoAAQAAAAAAAAAEACsAAQAAAAAAAAAEACwAAQAAAAAAAAAEAC0AAQAAAAAAAAAEAC4AAQAAAAAAAAAFAAIAAQAAAAEAAAAFAAMAAQADAAAAAAAFAB8AAQACAAAAAAAFACAAAQACAAAAAAAFACEAAQAAAAAAAAAFACIAAQAAAAAAAAAFACMAAQAAAAAAAAAFACQAAQAAAAAAAAAFACUAAQAAAAAAAAAFACYAAQAAAAAAAAAFACcAAQAAAAAAAAAFACgAAQAAAAAAAAAFACkAAQAAAAAAAAAFACoAAQAAAAAAAAAFACsAAQAAAAAAAAAFACwAAQAAAAAAAAAFAC0AAQAAAAAAAAAFAC4AAQAAAAAAAAAGAAIAAQAAAAEAAAAGAAMAAQADAAAAAAAGAB8AAQAAAAAAAAAGACAAAQABAAAAAAAGACEAAQABAAAAAAAGACIAAQABAAAAAAAGACMAAQABAAAAAAAGACQAAQACAAAAAAAGACUAAQACAAAAAAAGACYAAQACAAAAAAAGACcAAQABAAAAAAAGACgAAQAAAAAAAAAGACkAAQABAAAAAAAGACoAAQABAAAAAAAGACsAAQABAAAAAAAGACwAAQAAAAAAAAAGAC0AAQAAAAAAAAAGAC4AAQAAAAAAAAAHAAIAAQAAAAEAAAAHAAMAAQADAAAAAAAHAB8AAQAAAAAAAAAHACAAAQAAAAAAAAAHACEAAQAAAAAAAAAHACIAAQAAAAAAAAAHACMAAQAAAAAAAAAHACQAAQACAAAAAAAHACUAAQACAAAAAAAHACYAAQAAAAAAAAAHACcAAQAAAAAAAAAHACgAAQAAAAAAAAAHACkAAQAAAAAAAAAHACoAAQAAAAAAAAAIAAIAAQAAAAEAAAAIAAMAAQADAAAAAAAIAAQAAQABAAAAAAAIAAUAAQABAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQABAAAAAAAJAAIAAQAAAAEAAAAJAAMAAQADAAAAAAAJAAQAAQACAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQABAAAAAAAJAAcAAQABAAAAAAAKAAIAAQAAAAEAAAAKAAMAAQADAAAAAAAKAAQAAQABAAAAAAAKAAUAAQACAAAAAAAKAAYAAQABAAAAAAAKAAcAAQABAAAAAAALAAIAAQAAAAEAAAALAAMAAQADAAAAAAALAAQAAQABAAAAAAALAAUAAQABAAAAAAALAAYAAQABAAAAAAALAAcAAQABAAAAAAALAAgAAQABAAAAAAALAAkAAQABAAAAAAALAB8AAQACAAAAAAALACAAAQACAAAAAAALACEAAQACAAAAAAALACIAAQACAAAAAAALACMAAQACAAAAAAALACQAAQAAAAAAAAALACUAAQAAAAAAAAALACYAAQAAAAAAAAALACcAAQAAAAAAAAALACgAAQAAAAAAAAALACkAAQAAAAAAAAALACoAAQAAAAAAAAAMAAIAAQAAAAEAAAAMAAMAAQADAAAAAAAMAAQAAQABAAAAAAAMAAUAAQABAAAAAAAMAAYAAQACAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQABAAAAAAAMAAkAAQABAAAAAAAMAB8AAQABAAAAAAAMACAAAQAAAAAAAAAMACEAAQAAAAAAAAAMACIAAQAAAAAAAAAMACMAAQAAAAAAAAAMACQAAQABAAAAAAAMACUAAQABAAAAAAAMACYAAQAAAAAAAAAMACcAAQAAAAAAAAAMACgAAQABAAAAAAAMACkAAQAAAAAAAAAMACoAAQAAAAAAAAANAAIAAQAAAAEAAAANAAMAAQADAAAAAAANAAQAAQABAAAAAAANAAUAAQAAAAAAAAANAAYAAQABAAAAAAANAAcAAQABAAAAAAANAAgAAQABAAAAAAANAAkAAQACAAAAAAANAB8AAQABAAAAAAANACAAAQAAAAAAAAANACEAAQAAAAAAAAANACIAAQAAAAAAAAANACMAAQAAAAAAAAANACQAAQABAAAAAAANACUAAQABAAAAAAANACYAAQAAAAAAAAANACcAAQAAAAAAAAANACgAAQAAAAAAAAANACkAAQAAAAAAAAANACoAAQAAAAAAAAAOAAIAAQAAAAEAAAAOAAMAAQADAAAAAAAOAAQAAQABAAAAAAAOAAUAAQABAAAAAAAOAAYAAQABAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQABAAAAAAAOAAkAAQABAAAAAAAOAB8AAQABAAAAAAAOACAAAQAAAAAAAAAOACEAAQAAAAAAAAAOACIAAQAAAAAAAAAOACMAAQAAAAAAAAAOACQAAQACAAAAAAAOACUAAQABAAAAAAAOACYAAQABAAAAAAAOACcAAQACAAAAAAAOACgAAQAAAAAAAAAOACkAAQAAAAAAAAAOACoAAQAAAAAAAAAPAB8AAQABAAAAAAAPACAAAQAAAAAAAAAPACEAAQAAAAAAAAAPACIAAQAAAAAAAAAPACMAAQAAAAAAAAAPACQAAQACAAAAAAAPACUAAQACAAAAAAAPACYAAQACAAAAAAAPACcAAQACAAAAAAAPACgAAQAAAAAAAAAPACkAAQAAAAAAAAAPACoAAQAAAAAAAAAQAB8AAQABAAAAAAAQACAAAQAAAAAAAAAQACEAAQAAAAAAAAAQACIAAQAAAAAAAAAQACMAAQAAAAAAAAAQACQAAQAAAAAAAAAQACUAAQAAAAAAAAAQACYAAQAAAAAAAAAQACcAAQAAAAAAAAAQACgAAQAAAAAAAAAQACkAAQAAAAAAAAAQACoAAQAAAAAAAAARAB8AAQABAAAAAAARACAAAQAAAAAAAAARACEAAQAAAAAAAAARACIAAQACAAAAAAARACMAAQAAAAAAAAARACQAAQAAAAAAAAARACUAAQAAAAAAAAARACYAAQAAAAAAAAARACcAAQAAAAAAAAARACgAAQAAAAAAAAARACkAAQAAAAAAAAARACoAAQAAAAAAAAASAB8AAQABAAAAAAASACAAAQABAAAAAAASACEAAQABAAAAAAASACIAAQABAAAAAAASACMAAQAAAAAAAAASACQAAQAAAAAAAAASACUAAQAAAAAAAAASACYAAQAAAAAAAAASACcAAQAAAAAAAAASACgAAQAAAAAAAAASACkAAQAAAAAAAAASACoAAQAAAAAAAAATAB8AAQABAAAAAAATACAAAQABAAAAAAATACEAAQABAAAAAAATACIAAQABAAAAAAATACMAAQAAAAAAAAATACQAAQAAAAAAAAATACUAAQACAAAAAAATACYAAQAAAAAAAAATACcAAQAAAAAAAAATACgAAQACAAAAAAATACkAAQAAAAAAAAATACoAAQAAAAAAAAAUAB8AAQACAAAAAAAUACAAAQAAAAAAAAAUACEAAQAAAAAAAAAUACIAAQAAAAAAAAAUACMAAQAAAAAAAAAUACQAAQAAAAAAAAAUACUAAQACAAAAAAAUACYAAQAAAAAAAAAUACcAAQAAAAAAAAAUACgAAQAAAAAAAAAUACkAAQAAAAAAAAAUACoAAQAAAAAAAAAVAB8AAQACAAAAAAAVACAAAQACAAAAAAAVACEAAQAAAAAAAAAVACIAAQAAAAAAAAAVACMAAQAAAAAAAAAVACQAAQAAAAAAAAAVACUAAQAAAAAAAAAVACYAAQACAAAAAAAVACcAAQACAAAAAAAVACgAAQAAAAAAAAAVACkAAQAAAAAAAAAVACoAAQAAAAAAAAAWAB8AAQACAAAAAAAWACAAAQACAAAAAAAWACEAAQAAAAAAAAAWACIAAQAAAAAAAAAWACMAAQAAAAAAAAAWACQAAQAAAAAAAAAWACUAAQAAAAAAAAAWACYAAQACAAAAAAAWACcAAQACAAAAAAAWACgAAQAAAAAAAAAWACkAAQAAAAAAAAAWACoAAQAAAAAAAAAXAB8AAQACAAAAAAAXACAAAQACAAAAAAAXACEAAQAAAAAAAAAXACIAAQAAAAAAAAAXACMAAQAAAAAAAAAXACQAAQAAAAAAAAAXACUAAQAAAAAAAAAXACYAAQACAAAAAAAXACcAAQACAAAAAAAXACgAAQAAAAAAAAAXACkAAQAAAAAAAAAXACoAAQAAAAAAAAAYAB8AAQAAAAAAAAAYACAAAQAAAAAAAAAYACEAAQAAAAAAAAAYACIAAQAAAAAAAAAYACMAAQAAAAAAAAAYACQAAQAAAAAAAAAYACUAAQAAAAAAAAAYACYAAQACAAAAAAAYACcAAQACAAAAAAAYACgAAQAAAAAAAAAYACkAAQAAAAAAAAAYACoAAQAAAAAAAAAZAB8AAQABAAAAAAAZACAAAQAAAAAAAAAZACEAAQABAAAAAAAZACIAAQAAAAAAAAAZACMAAQAAAAAAAAAZACQAAQAAAAAAAAAZACUAAQABAAAAAAAZACYAAQABAAAAAAAZACcAAQABAAAAAAAZACgAAQABAAAAAAAZACkAAQAAAAAAAAAZACoAAQAAAAAAAAAaAB8AAQAAAAAAAAAaACAAAQAAAAAAAAAaACEAAQAAAAAAAAAaACIAAQAAAAAAAAAaACMAAQAAAAAAAAAaACQAAQAAAAAAAAAaACUAAQAAAAAAAAAaACYAAQABAAAAAAAaACcAAQABAAAAAAAaACgAAQABAAAAAAAaACkAAQAAAAAAAAAaACoAAQAAAAAAAAAbAB8AAQAAAAAAAAAbACAAAQAAAAAAAAAbACEAAQAAAAAAAAAbACIAAQAAAAAAAAAbACMAAQAAAAAAAAAbACQAAQAAAAAAAAAbACUAAQAAAAAAAAAbACYAAQABAAAAAAAbACcAAQABAAAAAAAbACgAAQABAAAAAAAbACkAAQAAAAAAAAAbACoAAQAAAAAAAAAcAB8AAQABAAAAAAAcACAAAQAAAAAAAAAcACEAAQAAAAAAAAAcACIAAQACAAAAAAAcACMAAQAAAAAAAAAcACQAAQAAAAAAAAAcACUAAQAAAAAAAAAcACYAAQABAAAAAAAcACcAAQABAAAAAAAcACgAAQABAAAAAAAcACkAAQAAAAAAAAAcACoAAQAAAAAAAAAdAB8AAQAAAAAAAAAdACAAAQAAAAAAAAAdACEAAQAAAAAAAAAdACIAAQAAAAAAAAAdACMAAQAAAAAAAAAdACQAAQAAAAAAAAAdACUAAQAAAAAAAAAdACYAAQABAAAAAAAdACcAAQABAAAAAAAdACgAAQABAAAAAAAdACkAAQAAAAAAAAAdACoAAQAAAAAAAAAeAB8AAQAAAAAAAAAeACAAAQAAAAAAAAAeACEAAQAAAAAAAAAeACIAAQAAAAAAAAAeACMAAQAAAAAAAAAeACQAAQAAAAAAAAAeACUAAQAAAAAAAAAeACYAAQAAAAAAAAAeACcAAQAAAAAAAAAeACgAAQAAAAAAAAAeACkAAQAAAAAAAAAeACoAAQAAAAAAAAAfAB8AAQAAAAAAAAAfACAAAQAAAAAAAAAfACEAAQAAAAAAAAAfACIAAQAAAAAAAAAfACMAAQAAAAAAAAAfACQAAQAAAAAAAAAfACUAAQAAAAAAAAAfACYAAQAAAAAAAAAfACcAAQAAAAAAAAAfACgAAQAAAAAAAAAfACkAAQAAAAAAAAAfACoAAQAAAAAAAAAgAB8AAQABAAAAAAAgACAAAQABAAAAAAAgACEAAQABAAAAAAAgACIAAQABAAAAAAAgACMAAQABAAAAAAAgACQAAQAAAAAAAAAgACUAAQAAAAAAAAAgACYAAQAAAAAAAAAgACcAAQAAAAAAAAAgACgAAQAAAAAAAAAgACkAAQAAAAAAAAAgACoAAQAAAAAAAAAhAB8AAQAAAAAAAAAhACAAAQAAAAAAAAAhACEAAQAAAAAAAAAhACIAAQACAAAAAAAhACMAAQAAAAAAAAAhACQAAQAAAAAAAAAhACUAAQAAAAAAAAAhACYAAQAAAAAAAAAhACcAAQAAAAAAAAAhACgAAQABAAAAAAAhACkAAQABAAAAAAAhACoAAQAAAAAAAAAiAB8AAQAAAAAAAAAiACAAAQAAAAAAAAAiACEAAQAAAAAAAAAiACIAAQACAAAAAAAiACMAAQAAAAAAAAAiACQAAQAAAAAAAAAiACUAAQAAAAAAAAAiACYAAQAAAAAAAAAiACcAAQAAAAAAAAAiACgAAQABAAAAAAAiACkAAQABAAAAAAAiACoAAQAAAAAAAAAjAB8AAQAAAAAAAAAjACAAAQAAAAAAAAAjACEAAQAAAAAAAAAjACIAAQACAAAAAAAjACMAAQAAAAAAAAAjACQAAQAAAAAAAAAjACUAAQAAAAAAAAAjACYAAQAAAAAAAAAjACcAAQAAAAAAAAAjACgAAQABAAAAAAAjACkAAQABAAAAAAAjACoAAQAAAAAAAAAkAB8AAQAAAAAAAAAkACAAAQAAAAAAAAAkACEAAQAAAAAAAAAkACIAAQACAAAAAAAkACMAAQAAAAAAAAAkACQAAQAAAAAAAAAkACUAAQACAAAAAAAkACYAAQACAAAAAAAkACcAAQAAAAAAAAAkACgAAQABAAAAAAAkACkAAQABAAAAAAAkACoAAQAAAAAAAAAlAB8AAQAAAAAAAAAlACAAAQAAAAAAAAAlACEAAQAAAAAAAAAlACIAAQACAAAAAAAlACMAAQAAAAAAAAAlACQAAQACAAAAAAAlACUAAQACAAAAAAAlACYAAQACAAAAAAAlACcAAQAAAAAAAAAlACgAAQABAAAAAAAlACkAAQABAAAAAAAlACoAAQAAAAAAAAAmAB8AAQAAAAAAAAAmACAAAQAAAAAAAAAmACEAAQAAAAAAAAAmACIAAQAAAAAAAAAmACMAAQAAAAAAAAAmACQAAQAAAAAAAAAmACUAAQAAAAAAAAAmACYAAQACAAAAAAAmACcAAQAAAAAAAAAmACgAAQABAAAAAAAmACkAAQABAAAAAAAmACoAAQAAAAAAAAAnAB8AAQAAAAAAAAAnACAAAQAAAAAAAAAnACEAAQAAAAAAAAAnACIAAQAAAAAAAAAnACMAAQAAAAAAAAAnACQAAQAAAAAAAAAnACUAAQAAAAAAAAAnACYAAQAAAAAAAAAnACcAAQAAAAAAAAAnACgAAQABAAAAAAAnACkAAQAAAAAAAAAnACoAAQAAAAAAAAAoAB8AAQAAAAAAAAAoACAAAQAAAAAAAAAoACEAAQABAAAAAAAoACIAAQABAAAAAAAoACMAAQABAAAAAAAoACQAAQAAAAAAAAAoACUAAQAAAAAAAAAoACYAAQAAAAAAAAAoACcAAQAAAAAAAAAoACgAAQAAAAAAAAAoACkAAQAAAAAAAAAoACoAAQAAAAAAAAApAB8AAQABAAAAAAApACAAAQAAAAAAAAApACEAAQABAAAAAAApACIAAQABAAAAAAApACMAAQABAAAAAAApACQAAQAAAAAAAAApACUAAQAAAAAAAAApACYAAQACAAAAAAApACcAAQAAAAAAAAApACgAAQAAAAAAAAApACkAAQAAAAAAAAApACoAAQAAAAAAAAAqAB8AAQABAAAAAAAqACAAAQACAAAAAAAqACEAAQAAAAAAAAAqACIAAQAAAAAAAAAqACMAAQAAAAAAAAAqACQAAQABAAAAAAAqACUAAQAAAAAAAAAqACYAAQAAAAAAAAAqACcAAQAAAAAAAAAqACgAAQAAAAAAAAAqACkAAQAAAAAAAAAqACoAAQAAAAAAAAArAB8AAQAAAAAAAAArACAAAQAAAAAAAAArACEAAQAAAAAAAAArACIAAQAAAAAAAAArACMAAQAAAAAAAAArACQAAQAAAAAAAAArACUAAQAAAAAAAAArACYAAQAAAAAAAAArACcAAQAAAAAAAAArACgAAQAAAAAAAAArACkAAQAAAAAAAAArACoAAQAAAAAAAAAsAB8AAQABAAAAAAAsACAAAQABAAAAAAAsACEAAQABAAAAAAAsACIAAQAAAAAAAAAsACMAAQAAAAAAAAAsACQAAQAAAAAAAAAsACUAAQAAAAAAAAAsACYAAQAAAAAAAAAsACcAAQAAAAAAAAAsACgAAQAAAAAAAAAsACkAAQAAAAAAAAAsACoAAQAAAAAAAAAtAB8AAQABAAAAAAAtACAAAQABAAAAAAAtACEAAQABAAAAAAAtACIAAQAAAAAAAAAtACMAAQAAAAAAAAAtACQAAQAAAAAAAAAtACUAAQAAAAAAAAAtACYAAQAAAAAAAAAtACcAAQAAAAAAAAAtACgAAQAAAAAAAAAtACkAAQAAAAAAAAAtACoAAQAAAAAAAAAuAB8AAQAAAAAAAAAuACAAAQAAAAAAAAAuACEAAQACAAAAAAAuACIAAQAAAAAAAAAuACMAAQAAAAAAAAAuACQAAQAAAAAAAAAuACUAAQAAAAAAAAAuACYAAQAAAAAAAAAuACcAAQACAAAAAAAuACgAAQABAAAAAAAuACkAAQAAAAAAAAAuACoAAQAAAAAAAAAvAB8AAQAAAAAAAAAvACAAAQAAAAAAAAAvACEAAQACAAAAAAAvACIAAQAAAAAAAAAvACMAAQAAAAAAAAAvACQAAQAAAAAAAAAvACUAAQAAAAAAAAAvACYAAQAAAAAAAAAvACcAAQACAAAAAAAvACgAAQABAAAAAAAvACkAAQAAAAAAAAAvACoAAQAAAAAAAAAwAB8AAQAAAAAAAAAwACAAAQAAAAAAAAAwACEAAQAAAAAAAAAwACIAAQABAAAAAAAwACMAAQAAAAAAAAAwACQAAQAAAAAAAAAwACUAAQAAAAAAAAAwACYAAQAAAAAAAAAwACcAAQACAAAAAAAwACgAAQABAAAAAAAwACkAAQAAAAAAAAAwACoAAQAAAAAAAAAxAB8AAQAAAAAAAAAxACAAAQAAAAAAAAAxACEAAQABAAAAAAAxACIAAQABAAAAAAAxACMAAQAAAAAAAAAxACQAAQAAAAAAAAAxACUAAQAAAAAAAAAxACYAAQAAAAAAAAAxACcAAQAAAAAAAAAxACgAAQABAAAAAAAxACkAAQAAAAAAAAAxACoAAQAAAAAAAAAyAB8AAQAAAAAAAAAyACAAAQAAAAAAAAAyACEAAQAAAAAAAAAyACIAAQAAAAAAAAAyACMAAQAAAAAAAAAyACQAAQAAAAAAAAAyACUAAQAAAAAAAAAyACYAAQAAAAAAAAAyACcAAQAAAAAAAAAyACgAAQABAAAAAAAyACkAAQAAAAAAAAAyACoAAQAAAAAAAAAzAB8AAQABAAAAAAAzACAAAQAAAAAAAAAzACEAAQAAAAAAAAAzACIAAQAAAAAAAAAzACMAAQAAAAAAAAAzACQAAQAAAAAAAAAzACUAAQAAAAAAAAAzACYAAQAAAAAAAAAzACcAAQAAAAAAAAAzACgAAQAAAAAAAAAzACkAAQAAAAAAAAAzACoAAQAAAAAAAAA0AB8AAQABAAAAAAA0ACAAAQAAAAAAAAA0ACEAAQAAAAAAAAA0ACIAAQAAAAAAAAA0ACMAAQABAAAAAAA0ACQAAQAAAAAAAAA0ACUAAQAAAAAAAAA0ACYAAQAAAAAAAAA0ACcAAQAAAAAAAAA0ACgAAQAAAAAAAAA0ACkAAQAAAAAAAAA0ACoAAQAAAAAAAAA1AB8AAQABAAAAAAA1ACAAAQAAAAAAAAA1ACEAAQAAAAAAAAA1ACIAAQAAAAAAAAA1ACMAAQABAAAAAAA1ACQAAQAAAAAAAAA1ACUAAQAAAAAAAAA1ACYAAQAAAAAAAAA1ACcAAQAAAAAAAAA1ACgAAQAAAAAAAAA1ACkAAQAAAAAAAAA1ACoAAQAAAAAAAAA2AB8AAQABAAAAAAA2ACAAAQAAAAAAAAA2ACEAAQAAAAAAAAA2ACIAAQAAAAAAAAA2ACMAAQAAAAAAAAA2ACQAAQAAAAAAAAA2ACUAAQACAAAAAAA2ACYAAQACAAAAAAA2ACcAAQAAAAAAAAA2ACgAAQACAAAAAAA2ACkAAQAAAAAAAAA2ACoAAQAAAAAAAAA3AB8AAQABAAAAAAA3ACAAAQAAAAAAAAA3ACEAAQACAAAAAAA3ACIAAQACAAAAAAA3ACMAAQACAAAAAAA3ACQAAQAAAAAAAAA3ACUAAQAAAAAAAAA3ACYAAQAAAAAAAAA3ACcAAQAAAAAAAAA3ACgAAQACAAAAAAA3ACkAAQABAAAAAAA3ACoAAQAAAAAAAAA4AB8AAQABAAAAAAA4ACAAAQAAAAAAAAA4ACEAAQACAAAAAAA4ACIAAQACAAAAAAA4ACMAAQACAAAAAAA4ACQAAQAAAAAAAAA4ACUAAQAAAAAAAAA4ACYAAQAAAAAAAAA4ACcAAQAAAAAAAAA4ACgAAQAAAAAAAAA4ACkAAQAAAAAAAAA4ACoAAQAAAAAAAAA5AB8AAQABAAAAAAA5ACAAAQAAAAAAAAA5ACEAAQACAAAAAAA5ACIAAQACAAAAAAA5ACMAAQACAAAAAAA5ACQAAQAAAAAAAAA5ACUAAQAAAAAAAAA5ACYAAQAAAAAAAAA5ACcAAQAAAAAAAAA5ACgAAQAAAAAAAAA5ACkAAQAAAAAAAAA5ACoAAQAAAAAAAAA6AB8AAQABAAAAAAA6ACAAAQAAAAAAAAA6ACEAAQACAAAAAAA6ACIAAQACAAAAAAA6ACMAAQACAAAAAAA6ACQAAQAAAAAAAAA6ACUAAQAAAAAAAAA6ACYAAQAAAAAAAAA6ACcAAQAAAAAAAAA6ACgAAQAAAAAAAAA6ACkAAQAAAAAAAAA6ACoAAQAAAAAAAAA7AB8AAQABAAAAAAA7ACAAAQAAAAAAAAA7ACEAAQACAAAAAAA7ACIAAQACAAAAAAA7ACMAAQACAAAAAAA7ACQAAQAAAAAAAAA7ACUAAQAAAAAAAAA7ACYAAQAAAAAAAAA7ACcAAQAAAAAAAAA7ACgAAQAAAAAAAAA7ACkAAQAAAAAAAAA7ACoAAQAAAAAAAAA8AB8AAQAAAAAAAAA8ACAAAQAAAAAAAAA8ACEAAQACAAAAAAA8ACIAAQAAAAAAAAA8ACMAAQAAAAAAAAA8ACQAAQAAAAAAAAA8ACUAAQAAAAAAAAA8ACYAAQAAAAAAAAA8ACcAAQABAAAAAAA8ACgAAQABAAAAAAA8ACkAAQABAAAAAAA8ACoAAQAAAAAAAAA9AB8AAQABAAAAAAA9ACAAAQABAAAAAAA9ACEAAQABAAAAAAA9ACIAAQACAAAAAAA9ACMAAQACAAAAAAA9ACQAAQAAAAAAAAA9ACUAAQAAAAAAAAA9ACYAAQAAAAAAAAA9ACcAAQABAAAAAAA9ACgAAQABAAAAAAA9ACkAAQABAAAAAAA9ACoAAQAAAAAAAAA+AB8AAQABAAAAAAA+ACAAAQABAAAAAAA+ACEAAQABAAAAAAA+ACIAAQAAAAAAAAA+ACMAAQAAAAAAAAA+ACQAAQAAAAAAAAA+ACUAAQAAAAAAAAA+ACYAAQAAAAAAAAA+ACcAAQAAAAAAAAA+ACgAAQAAAAAAAAA+ACkAAQAAAAAAAAA+ACoAAQAAAAAAAAA/AB8AAQAAAAAAAAA/ACAAAQAAAAAAAAA/ACEAAQAAAAAAAAA/ACIAAQABAAAAAAA/ACMAAQABAAAAAAA/ACQAAQABAAAAAAA/ACUAAQAAAAAAAAA/ACYAAQAAAAAAAAA/ACcAAQAAAAAAAAA/ACgAAQAAAAAAAAA/ACkAAQAAAAAAAAA/ACoAAQAAAAAAAABAAB8AAQAAAAAAAABAACAAAQAAAAAAAABAACEAAQAAAAAAAABAACIAAQAAAAAAAABAACMAAQAAAAAAAABAACQAAQAAAAAAAABAACUAAQAAAAAAAABAACYAAQAAAAAAAABAACcAAQAAAAAAAABAACgAAQAAAAAAAABAACkAAQAAAAAAAABAACoAAQAAAAAAAABAACsAAQAAAAAAAABAACwAAQAAAAAAAABBAB8AAQAAAAAAAABBACAAAQAAAAAAAABBACEAAQAAAAAAAABBACIAAQAAAAAAAABBACMAAQAAAAAAAABBACQAAQAAAAAAAABBACUAAQAAAAAAAABBACYAAQAAAAAAAABBACcAAQAAAAAAAABBACgAAQAAAAAAAABBACkAAQAAAAAAAABBACoAAQAAAAAAAABBACsAAQAAAAAAAABBACwAAQAAAAAAAABCAB8AAQAAAAAAAABCACAAAQAAAAAAAABCACEAAQAAAAAAAABCACIAAQAAAAAAAABCACMAAQAAAAAAAABCACQAAQAAAAAAAABCACUAAQAAAAAAAABCACYAAQAAAAAAAABCACcAAQAAAAAAAABCACgAAQAAAAAAAABCACkAAQAAAAAAAABCACoAAQAAAAAAAABCACsAAQAAAAAAAABCACwAAQAAAAAAAABDAB8AAQAAAAAAAABDACAAAQAAAAAAAABDACEAAQAAAAAAAABDACIAAQAAAAAAAABDACMAAQAAAAAAAABDACQAAQAAAAAAAABDACUAAQAAAAAAAABDACYAAQAAAAAAAABDACcAAQAAAAAAAABDACgAAQAAAAAAAABDACkAAQAAAAAAAABDACoAAQAAAAAAAABDACsAAQAAAAAAAABDACwAAQAAAAAAAABEAB8AAQAAAAAAAABEACAAAQAAAAAAAABEACEAAQAAAAAAAABEACIAAQAAAAAAAABEACMAAQAAAAAAAABEACQAAQAAAAAAAABEACUAAQAAAAAAAABEACYAAQAAAAAAAABEACcAAQAAAAAAAABEACgAAQAAAAAAAABEACkAAQAAAAAAAABEACoAAQAAAAAAAABEACsAAQAAAAAAAABEACwAAQAAAAAAAABFAB8AAQAAAAAAAABFACAAAQAAAAAAAABFACEAAQAAAAAAAABFACIAAQAAAAAAAABFACMAAQAAAAAAAABFACQAAQAAAAAAAABFACUAAQAAAAAAAABFACYAAQAAAAAAAABFACcAAQAAAAAAAABFACgAAQAAAAAAAABFACkAAQAAAAAAAABFACoAAQAAAAAAAABFACsAAQAAAAAAAABFACwAAQAAAAAAAABGAB8AAQAAAAAAAABGACAAAQAAAAAAAABGACEAAQAAAAAAAABGACIAAQAAAAAAAABGACMAAQAAAAAAAABGACQAAQAAAAAAAABGACUAAQAAAAAAAABGACYAAQAAAAAAAABGACcAAQAAAAAAAABGACgAAQAAAAAAAABGACkAAQAAAAAAAABGACoAAQAAAAAAAABGACsAAQAAAAAAAABGACwAAQAAAAAAAAAAAAQAAQABAAAAAAAAAAUAAQABAAAAAAAAAAYAAQABAAAAAAAAAAcAAQABAAAAAAAAAAgAAQABAAAAAAAAAAkAAQABAAAAAAABAAQAAQABAAAAAAABAAUAAQABAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQABAAAAAAABAAkAAQACAAAAAAACAAQAAQAAAAAAAAACAAUAAQABAAAAAAACAAYAAQABAAAAAAACAAcAAQABAAAAAAACAAgAAQACAAAAAAACAAkAAQABAAAAAAADAAQAAQABAAAAAAADAAUAAQAAAAAAAAADAAYAAQABAAAAAAADAAcAAQAAAAAAAAADAAgAAQABAAAAAAADAAkAAQABAAAAAAAEAAQAAQABAAAAAAAEAAUAAQABAAAAAAAEAAYAAQABAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQABAAAAAAAEAAkAAQABAAAAAAAFAAQAAQABAAAAAAAFAAUAAQACAAAAAAAFAAYAAQABAAAAAAAFAAcAAQACAAAAAAAFAAgAAQABAAAAAAAFAAkAAQABAAAAAAAGAAQAAQABAAAAAAAGAAUAAQABAAAAAAAGAAYAAQABAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQABAAAAAAAGAAkAAQABAAAAAAAHAAQAAQABAAAAAAAHAAUAAQABAAAAAAAHAAYAAQACAAAAAAAHAAcAAQABAAAAAAAHAAgAAQABAAAAAAAHAAkAAQABAAAAAAAIAAgAAQABAAAAAAAIAAkAAQAAAAAAAAAJAAgAAQABAAAAAAAJAAkAAQABAAAAAAAKAAgAAQACAAAAAAAKAAkAAQABAAAAAAA=")
tile_set = SubResource("TileSet_vkr66")

[node name="Player" type="CharacterBody2D" parent="GameManager"]
script = ExtResource("1_ju177")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Player"]
shape = SubResource("CircleShape2D_bw225")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GameManager/Player"]
position = Vector2(203, 365)
sprite_frames = SubResource("SpriteFrames_c5bxn")
animation = &"idle"

[node name="FlowerInstance" parent="." instance=ExtResource("11_c5bxn")]
